added stub implementations for almost all interfaces

--- a/meson.build
+++ b/meson.build
@@ -32,10 +32,32 @@ steam_api_srcs = [
     steam_types,
     ifaces,
     iface_loader,
+    'src/Apps.cc',
+    'src/AppList.cc',
+    'src/Client.cc',
+    'src/Controller.cc',
+    'src/Friends.cc',
+    'src/HTMLSurface.cc',
+    'src/HTTP.cc',
+    'src/Inventory.cc',
+    'src/Matchmaking.cc',
+    'src/Matchmaking.cc',
+    #FIXME 'src/MatchmakingServers.cc',
+    'src/Music.cc',
+    'src/MusicRemote.cc',
+    'src/Networking.cc',
+    'src/RemoteStorage.cc',
+    'src/Screenshots.cc',
     'src/User.cc',
     'src/UserStats.cc',
     'src/Utils.cc',
     'src/UGC.cc',
+    'src/Video.cc',
+    'src/AppTicket.cc',
+    'src/GameServer.cc',
+    'src/GameServerStats.cc',
+    'src/GameCoordinator.cc',
+    'src/ParentalSettings.cc',
 ]
 
 shared_library('steam_api', [steam_api_srcs], dependencies : [openssl])
