--- a/examples/freesteamapi.ini
+++ b/examples/freesteamapi.ini
@@ -2,46 +2,47 @@
 
 [Interfaces]
 SteamUser=SteamUser018
-#SteamFriends=SteamFriends015
+SteamFriends=SteamFriends015
 SteamUtils=SteamUtils007
-#SteamMatchMaking=SteamMatchMaking009
-#SteamMatchMakingServers=SteamMatchMakingServers002
+SteamMatchMaking=SteamMatchMaking009
+SteamMatchMakingServers=SteamMatchMakingServers002
 SteamUserStats=STEAMUSERSTATS_INTERFACE_VERSION011
-#SteamApps=STEAMAPPS_INTERFACE_VERSION007
-#SteamNetworking=SteamNetworking005
-#SteamRemoteStorage=STEAMREMOTESTORAGE_INTERFACE_VERSION013
-#SteamScreenshot=STEAMSCREENSHOTS_INTERFACE_VERSION002
-#SteamHTTP=STEAMHTTP_INTERFACE_VERSION002
-#SteamUnifiedMessages=STEAMUNIFIEDMESSAGES_INTERFACE_VERSION001
-#SteamController=SteamController003
+SteamApps=STEAMAPPS_INTERFACE_VERSION007
+SteamNetworking=SteamNetworking005
+SteamRemoteStorage=STEAMREMOTESTORAGE_INTERFACE_VERSION013
+SteamScreenshot=STEAMSCREENSHOTS_INTERFACE_VERSION002
+SteamHTTP=STEAMHTTP_INTERFACE_VERSION002
+SteamUnifiedMessages=STEAMUNIFIEDMESSAGES_INTERFACE_VERSION001
+SteamController=SteamController003
 SteamUGC=STEAMUGC_INTERFACE_VERSION007
-#SteamAppList=STEAMAPPLIST_INTERFACE_VERSION001
-#SteamMusic=STEAMMUSIC_INTERFACE_VERSION001
-#SteamMusicRemote=STEAMMUSICREMOTE_INTERFACE_VERSION001
-#SteamHTMLSurface=STEAMHTMLSURFACE_INTERFACE_VERSION_003
-#SteamInventory=STEAMINVENTORY_INTERFACE_V001
-#SteamVideo=STEAMVIDEO_INTERFACE_V001
+SteamAppList=STEAMAPPLIST_INTERFACE_VERSION001
+SteamMusic=STEAMMUSIC_INTERFACE_VERSION001
+SteamMusicRemote=STEAMMUSICREMOTE_INTERFACE_VERSION001
+SteamHTMLSurface=STEAMHTMLSURFACE_INTERFACE_VERSION_003
+SteamInventory=STEAMINVENTORY_INTERFACE_V001
+SteamVideo=STEAMVIDEO_INTERFACE_V001
 
 [Entrypoints]
 sha1sum=e1da76787630be42c03310d612671092bb258f54
 SteamAPI_Init=0x282cfe9
-#SteamUser=0x0282b5d6
-#SteamFriends=0x282b5de
-#SteamUtils=0x282b5e6
-#SteamMatchMaking=0x282b5ee
-#SteamMatchMakingServers=0x282b5f6
-#SteamUserStats=0x282b5fe
-#SteamApps=0x282b606
-#SteamNetworking=0x282b60e
-#SteamRemoteStorage=0x282b616
-#SteamScreenshot=0x282b61e
-#SteamHTTP=0x282b626
-#SteamUnifiedMessages=0x282b62e
-#SteamController=0x282b636
-#SteamUGC=0x282b63e
-#SteamAppList=0x282b646
-#SteamMusic=0x282b64e
-#SteamMusicRemote=0x282b656
-#SteamHTMLSurface=0x282b65e
-#SteamInventory=0x282b666
-#SteamVideo=0x282b66e
+SteamUser=0x0282b5d6
+SteamFriends=0x282b5de
+SteamUtils=0x282b5e6
+SteamMatchMaking=0x282b5ee
+SteamMatchMakingServers=0x282b5f6
+SteamUserStats=0x282b5fe
+SteamApps=0x282b606
+SteamNetworking=0x282b60e
+SteamRemoteStorage=0x282b616
+SteamScreenshot=0x282b61e
+SteamHTTP=0x282b626
+SteamUnifiedMessages=0x282b62e
+SteamController=0x282b636
+SteamUGC=0x282b63e
+SteamAppList=0x282b646
+SteamMusic=0x282b64e
+SteamMusicRemote=0x282b656
+SteamHTMLSurface=0x282b65e
+SteamInventory=0x282b666
+SteamVideo=0x282b66e
+
